force-app/main/default/objects/Categorie_reservee_produit__c/Categorie_reservee_produit__c.object-meta.xml
<CustomObject>
    <label>Catégorie réservée - produit</label>
    <nameField>
        <displayFormat>CAT{00000}</displayFormat>
        <label>Catégorie réservée Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catégories réservées - produit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>