force-app/main/default/objects/Categorie_reservee_produit__c/fields/Categorie_reservee__c.field-meta.xml
<CustomField>
    <fullName>Categorie_reservee__c</fullName>
    <label>Catégorie réservée</label>
    <referenceTo>Categorie_reservee__c</referenceTo>
    <relationshipLabel>Catégories réservées - produit</relationshipLabel>
    <relationshipName>Categories_reservees_produit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>