force-app/main/default/objects/Categorie_reservee_produit__c/fields/Produit_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Produit_opportunite__c</fullName>
    <label>Produit d&apos;opportunité</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Catégories réservées - produit</relationshipLabel>
    <relationshipName>Categories_reservees_produit</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>