force-app/main/default/objects/Categorie_reservee_produit__c/fields/Univers__c.field-meta.xml
<CustomField>
    <fullName>Univers__c</fullName>
    <formula>Categorie_reservee__r.Univers__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Univers</label>
    <type>Text</type>
</CustomField>